add more elements

--- a/index.html
+++ b/index.html
@@ -21,10 +21,25 @@
             </button>
         </div>
 
-        <div class="list">
 
-            
+        <div class="grocery-container">
+            <div class="list">
+                <div class="items">
+                    <p class="title">Items</p>
+                    <div class="button-container">
+                        <button type="button" class="edit-btn">Edit</button>
+                        <button type="button" class="delete-btn">Delete</button>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <div class="clear-container">
+            <button type="button" class="clear-btn">Clear</button>
+        </div>
+
+
+        
 
     </div>
 </html>
