--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js" defer"></script>
+    <script src="main.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -25,7 +25,7 @@
         <div class="grocery-container">
             <div class="list">
                 <div class="items">
-                    <p class="title">Items</p>
+                    <p class="item-title">Items</p>
                     <div class="button-container">
                         <button type="button" class="edit-btn">Edit</button>
                         <button type="button" class="delete-btn">Delete</button>
