work on more of evreything

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="grocery-container">
             <div class="list">
                 <div class="items">
-                    <p class="item-title">Items</p>
+                    <p class="item-title"></p>
                     <div class="button-container">
                         <button type="button" class="edit-btn">Edit</button>
                         <button type="button" class="delete-btn">Delete</button>
