--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="info">
-            <input type="text" class="text" placeholder="Example: Milk">
+            <input type="text" class="input-box" placeholder="Example: Milk">
             <button type="submit" class="submit-btn">
                 Submit
             </button>
@@ -25,11 +25,7 @@
         <div class="grocery-container">
             <div class="list">
                 <div class="items">
-                    <p class="item-title"></p>
-                    <div class="button-container">
-                        <button type="button" class="edit-btn">Edit</button>
-                        <button type="button" class="delete-btn">Delete</button>
-                    </div>
+         
                 </div>
             </div>
         </div>
@@ -42,4 +38,5 @@
         
 
     </div>
-</html>
+</html> 
+
