--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <div class="grocery-container">
             <div class="list">
                 <div class="items">
+                    <div class="text"></div>
+                    <div class="btn"></div>
          
                 </div>
             </div>
