--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container">
         <div class="title">
             <h1>Grocery List</h1>
+            <p class="error"></p>
         </div>
 
         <div class="info">
